--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -97,3 +97,47 @@ form {
     margin-top: 16px;
   }
 }
+
+.container {
+  width:100%;
+  background-image: url('https://images.unsplash.com/photo-1545431781-3e1b506e9a37?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.title {
+  width: 100%;
+  height: 60px;
+}
+
+.login-form {
+  width: 45%;
+  margin-left: 30%;
+}
+
+.login-form input {
+  width: 80%;
+  font-size: 2rem;
+  margin: 1%;
+}
+
+.login-form button {
+  width: 30%;
+  margin-left: 25%;
+  height: 30px;
+  font-size: 1.5rem;
+  border-radius: 12px;
+}
+
+.btn {
+  font-size: 2rem;
+  text-decoration: none;
+  background-color: rgba(252, 252, 252, 0.788);
+  width: 80px;
+  height: 30px;
+  padding: 5px;
+  padding-bottom: 10px;
+  color: black;
+  border: 2px solid black;
+  border-radius: 15px;
+}
